bootstrap/argocd/templates/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/target: dabol.cloud
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
  name: argocd-external
spec:
  ingressClassName: nginx-external
  rules:
  - host: &host argocd.dabol.cloud
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /api/webhook
        pathType: Prefix
  tls:
  - hosts:
    - *host
    secretName: argocd-external-tls-certificate
